@@ -3,6 +3,10 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2006/11/16
+	* Overlapping song/dances will now cause dissonance/ugly-dance level 1
+	  instead of retaining the level of their song/dance. [Skotlex]
+	* Fixed wrong check in @petrename, thanks to The Ultra Mage.[Skotlex]
 2006/11/14
 	* Early Christmas present. 3 new "features" which were very easy to code,
 	  and should help scripters tremendously. Eapp is quite a way from being
